<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bytesnmaterials.zro.features.login.LoginActivity"
    tools:showIn="@layout/activity_login">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minEms="10" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsername"
        android:layout_alignRight="@id/txtUsername"
        android:layout_alignLeft="@id/txtUsername"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minEms="10" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/txtUsername"
        android:layout_alignLeft="@id/txtUsername"
        android:layout_below="@id/txtPassword"
        android:layout_marginTop="@dimen/button_login_register_margin_top"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnLoginWithGoogle"
        android:layout_below="@id/btnLogin"
        android:layout_alignRight="@id/txtUsername"
        android:layout_alignLeft="@id/txtUsername"
        android:text="@string/login_with_google"
        android:textColor="@color/white"
        android:background="@color/button_google_color"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLoginWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLoginWithGoogle"
        android:layout_alignRight="@id/txtUsername"
        android:layout_alignLeft="@id/txtUsername"
        android:textColor="@color/white"
        android:background="@color/button_facebook_color"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/login_with_facebook" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/txtUsername"
        android:layout_alignLeft="@id/txtUsername"
        android:layout_below="@id/btnLoginWithFacebook"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/register" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/txtPassword"
        android:layout_alignLeft="@id/txtPassword"
        android:layout_below="@id/btnRegister"
        android:clickable="true"
        android:gravity="center"
        android:textColor="@color/color_MediumL3"
        android:layout_marginTop="@dimen/text_forgot_password_margin_top"
        android:text="@string/forgot_password" />


</RelativeLayout>
